// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SummaryLoading > should match snapshot when FAILED 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center bg-white text-typography-800 h-fit space-y-4"
  >
    <div
      class="h-full flex flex-col justify-around w-full"
    >
      <div
        class="flex flex-col items-center justify-center"
      >
        <svg
          class="w-64"
          data-testid="summary-failed-icon"
        />
        <h1
          class="font-semibold mb-2 font-primary text-2xl"
        >
          Failed to generate session summary
        </h1>
      </div>
      <div
        class="w-full max-w-2xl border-t border-gray-200 pt-[20px] mx-auto"
      >
        <div
          class="flex flex-row justify-between items-center mb-2 px-[10px]"
        >
          <div
            class="flex flex-row items-center gap-[16px]"
          >
            <svg
              data-testid="notes-icon"
            />
            <label
              class="flex items-center gap-2 font-primary text-sm font-medium text-typography-800"
              for="notes"
            >
              <span>
                Add Notes (optional)
              </span>
            </label>
          </div>
          <div
            data-testid="tooltip"
            data-title="Your notes are saved automatically and will appear under “Additional Notes” after the summary is created."
          >
            <span
              class="inline-flex"
            >
              <svg
                class="w-[12px] h-[12px] text-[#1C1B1F] cursor-pointer"
                data-testid="info-icon"
              />
            </span>
          </div>
        </div>
        <textarea
          aria-label="Add Notes (optional)"
          class="w-full font-primary"
          disabled=""
          id="notes"
          placeholder="write down your thoughts"
          rows="4"
        />
      </div>
      <div
        class="flex flex-row gap-8 items-center justify-center mt-6 "
      >
        <button
          class=" w-40 font-primary"
          data-variant="secondary"
        >
          Back to session logs
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SummaryLoading > should match snapshot when IN_PROGRESS 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center bg-white text-typography-800 h-fit space-y-4"
  >
    <div
      class="h-full flex flex-col justify-around w-full"
    >
      <div
        class="flex flex-col items-center justify-center"
      >
        <div
          class="h-8"
        />
        <video
          autoplay=""
          class="w-64 object-contain"
          loop=""
          playsinline=""
          src="video-path.mp4"
        />
        <div
          class="mb-8"
        >
          <div
            class="text-xl font-primary"
            data-testid="shiny-text"
          >
            Generating transcription
          </div>
        </div>
        <p
          class="text-neutral-600 text-base text-center font-primary mb-1"
        >
          An AI-generated summary will be available shortly on this screen and in the session logs. In the meantime, you can add notes below.
        </p>
      </div>
      <div
        class="w-full max-w-2xl border-t border-gray-200 pt-[20px] mx-auto"
      >
        <div
          class="flex flex-row justify-between items-center mb-2 px-[10px]"
        >
          <div
            class="flex flex-row items-center gap-[16px]"
          >
            <svg
              data-testid="notes-icon"
            />
            <label
              class="flex items-center gap-2 font-primary text-sm font-medium text-typography-800"
              for="notes"
            >
              <span>
                Add Notes (optional)
              </span>
            </label>
          </div>
          <div
            data-testid="tooltip"
            data-title="Your notes are saved automatically and will appear under “Additional Notes” after the summary is created."
          >
            <span
              class="inline-flex"
            >
              <svg
                class="w-[12px] h-[12px] text-[#1C1B1F] cursor-pointer"
                data-testid="info-icon"
              />
            </span>
          </div>
        </div>
        <textarea
          aria-label="Add Notes (optional)"
          class="w-full font-primary"
          disabled=""
          id="notes"
          placeholder="write down your thoughts"
          rows="4"
        />
      </div>
      <div
        class="flex flex-row gap-8 items-center justify-center mt-6 "
      >
        <button
          class=" w-40 font-primary"
          data-variant="text"
        >
          I'll check later
        </button>
        <button
          class=" w-40 font-primary"
          data-variant="secondary"
        >
          See if its ready
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SummaryLoading > should match snapshot when NO_AUDIO 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center bg-white text-typography-800 h-fit space-y-4"
  >
    <div
      class="h-full flex flex-col justify-around w-full"
    >
      <div
        class="flex flex-col items-center justify-center"
      >
        <span
          class="rounded-full border-[0.5px] border-destructive-300 px-2 py-1 text-destructive-400 text-xs mb-8 flex items-center gap-1"
        >
          <svg
            class="w-4 h-4 text-destructive-300"
            data-testid="circle-x-icon"
          />
           No audio detected
        </span>
        <svg
          class="w-64"
          data-testid="summary-failed-icon"
        />
        <h1
          class="font-semibold mb-2 font-primary text-2xl"
        >
          Failed to generate session summary
        </h1>
      </div>
      <div
        class="w-full max-w-2xl border-t border-gray-200 pt-[20px] mx-auto"
      >
        <div
          class="flex flex-row justify-between items-center mb-2 px-[10px]"
        >
          <div
            class="flex flex-row items-center gap-[16px]"
          >
            <svg
              data-testid="notes-icon"
            />
            <label
              class="flex items-center gap-2 font-primary text-sm font-medium text-typography-800"
              for="notes"
            >
              <span>
                Add Notes (optional)
              </span>
            </label>
          </div>
          <div
            data-testid="tooltip"
            data-title="Your notes are saved automatically and will appear under “Additional Notes” after the summary is created."
          >
            <span
              class="inline-flex"
            >
              <svg
                class="w-[12px] h-[12px] text-[#1C1B1F] cursor-pointer"
                data-testid="info-icon"
              />
            </span>
          </div>
        </div>
        <textarea
          aria-label="Add Notes (optional)"
          class="w-full font-primary"
          disabled=""
          id="notes"
          placeholder="write down your thoughts"
          rows="4"
        />
      </div>
      <div
        class="flex flex-row gap-8 items-center justify-center mt-6 "
      >
        <button
          class=" w-40 font-primary"
          data-variant="secondary"
        >
          Back to session logs
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SummaryLoading > should match snapshot when SUCCESS 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center bg-white text-typography-800 h-fit space-y-4"
  >
    <div
      class="h-full flex flex-col justify-around w-full"
    >
      <div
        class="flex flex-col items-center justify-center"
      >
        <svg
          class="w-64"
          data-testid="summary-generated-illustration"
        />
        <h1
          class="font-semibold mb-2 font-primary text-2xl"
        >
          Summary is generated
        </h1>
        <p
          class="text-typography-800 text-base text-center max-w-md font-primary mb-1"
        >
          You can review the session now.
        </p>
      </div>
      <div
        class="w-full max-w-2xl border-t border-gray-200 pt-[20px] mx-auto"
      >
        <div
          class="flex flex-row justify-between items-center mb-2 px-[10px]"
        >
          <div
            class="flex flex-row items-center gap-[16px]"
          >
            <svg
              data-testid="notes-icon"
            />
            <label
              class="flex items-center gap-2 font-primary text-sm font-medium text-typography-800"
              for="notes"
            >
              <span>
                Add Notes (optional)
              </span>
            </label>
          </div>
          <div
            data-testid="tooltip"
            data-title="Your notes are saved automatically and will appear under “Additional Notes” after the summary is created."
          >
            <span
              class="inline-flex"
            >
              <svg
                class="w-[12px] h-[12px] text-[#1C1B1F] cursor-pointer"
                data-testid="info-icon"
              />
            </span>
          </div>
        </div>
        <textarea
          aria-label="Add Notes (optional)"
          class="w-full font-primary"
          disabled=""
          id="notes"
          placeholder="write down your thoughts"
          rows="4"
        />
      </div>
      <div
        class="flex flex-row gap-8 items-center justify-center mt-6 "
      >
        <button
          class="w-72"
          data-variant="secondary"
          disabled=""
        >
          <div
            data-testid="loading"
          >
            Loading
          </div>
           Setting up your summary screen
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
